6920. Fixed a bug in datagrid where disabled dates were not showing in Safari

--- a/src/components/calendar/_calendar-toolbar-new.scss
+++ b/src/components/calendar/_calendar-toolbar-new.scss
@@ -16,4 +16,11 @@
   .dropdown-wrapper {
     top: 12px;
   }
+
+  .today {
+    &.is-disabled {
+      color: $datepicker-disabled-color;
+      cursor: default;
+    }
+  }
 }
